// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jsx-quotes correct 1`] = `
Object {
  "errorCount": 0,
  "filePath": "jsx-quotes.correct.js",
  "fixableErrorCount": 0,
  "fixableWarningCount": 0,
  "messages": Array [],
  "warningCount": 0,
}
`;

exports[`jsx-quotes incorrect 1`] = `
Object {
  "errorCount": 1,
  "filePath": "jsx-quotes.incorrect.js",
  "fixableErrorCount": 1,
  "fixableWarningCount": 0,
  "messages": Array [
    Object {
      "column": 14,
      "endColumn": 30,
      "endLine": 3,
      "fix": Object {
        "range": Array [
          63,
          79,
        ],
        "text": "'This is not ok'",
      },
      "line": 3,
      "message": "Unexpected usage of doublequote.",
      "messageId": "unexpected",
      "nodeType": "Literal",
      "ruleId": "jsx-quotes",
      "severity": 2,
    },
  ],
  "source": "export function IncorrectComponent() {
  return (
    <div one=\\"This is not ok\\">
      Some invalid quotes
    </div>
  )
}
",
  "warningCount": 0,
}
`;

exports[`react/jsx-closing-bracket-location correct 1`] = `
Object {
  "errorCount": 0,
  "filePath": "react/jsx-closing-bracket-location.correct.js",
  "fixableErrorCount": 0,
  "fixableWarningCount": 0,
  "messages": Array [],
  "warningCount": 0,
}
`;

exports[`react/react-in-jsx-scope correct 1`] = `
Object {
  "errorCount": 0,
  "filePath": "react/react-in-jsx-scope.correct.js",
  "fixableErrorCount": 0,
  "fixableWarningCount": 0,
  "messages": Array [],
  "warningCount": 0,
}
`;

exports[`react/react-in-jsx-scope incorrect 1`] = `
Object {
  "errorCount": 1,
  "filePath": "react/react-in-jsx-scope.incorrect.js",
  "fixableErrorCount": 0,
  "fixableWarningCount": 0,
  "messages": Array [
    Object {
      "column": 8,
      "endColumn": 13,
      "endLine": 1,
      "line": 1,
      "message": "'React' is defined but never used.",
      "messageId": "unusedVar",
      "nodeType": "Identifier",
      "ruleId": "no-unused-vars",
      "severity": 2,
    },
  ],
  "source": "import React from 'react'

export default function App() {
  return (
    <div>
      React does not need to be in scope.
    </div>
  )
}
",
  "warningCount": 0,
}
`;
